--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "CloakTalk - Secure Student Communication",
+  "name": "CloakTalk",
   "short_name": "CloakTalk",
   "description": "Connect securely with your peers and classmates within your organization. CloakTalk provides safe, private messaging for students.",
   "start_url": "/",
